doc: update swagger documentation
